kubernetes/applications/monitoring/ingressroute.yaml
---
# Grafana IngressRoute
# Access at: https://grafana.silverseekers.org
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.silverseekers.org`)
      kind: Rule
      services:
        - name: grafana
          port: 80
  tls:
    secretName: grafana-tls
